--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Calibri", "Sans-Sarif";
+    font-family: "Carlito", sans-serif;
     background-color: rgb(204, 204, 204);
     /* width: 100%; */
 }
